test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/scalar_expressions/void_if_condition.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(10)
  ;
  if
  (
  (
  void
  )
  identifier(x)
  )
  return
  const int(0)
  ;
  return
  const int(1)
  ;
  }
